# salvo-static-server

./: .dockerignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.bak  Makefile  README.md  docker-compose.yml
src/: main.rs
static/: 17.async.js  232.async.js  240.async.js  274.async.js  311.async.js  333.async.js  341.async.js  368.async.js  401.async.js  407.async.js  434.async.js  442.async.js  577.async.js  673.async.js  718.async.js  782.async.js  829.async.js  837.async.js  839.async.js  927.async.js  layouts__index.async.js  p__403__index.async.js  p__Access__index.async.js  p__Admin__index.async.js  p__Admin__sub-page.async.js  p__CustomButtonDemo__index.async.js  p__Error__404.async.js  p__Extension__index.async.js  p__Home__index.async.js  p__List__index.async.js  p__List__sub-page.async.js  p__Login__index.async.js  p__Login__index.chunk.css  p__OAuthCallback__index.async.js  p__ThemeDemo__index.async.js  p__ThemeDemo__index.chunk.css  p__WebRTCCall__index.async.js  p__WebRTCCall__index.chunk.css  p__Welcome__index.async.js  p__Welcome__index.chunk.css  (+4 more)
