[package]
name = "salvo-static-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "static-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
salvo = { version="0.88.1", features = ["quinn", "serve-static", "acme", "rustls", "logging", "compression"] }
tokio = "1.49.0"
tracing-subscriber = "0.3.22"
